--- a/index.html
+++ b/index.html
@@ -44,7 +44,43 @@
 
 <script>
     const stories = {
-        en: [
+        en: [const stories = {
+    en: [
+        { t: "1. The Lion and the Clever Rabbit", c: "A cruel lion was killing all animals for food. A clever rabbit told the lion another king lived in a well. The lion saw his reflection, jumped in to fight, and drowned.", m: "Intelligence is superior to physical strength." },
+        { t: "2. The Monkey and the Crocodile", c: "A monkey gave jamuns to a crocodile. The crocodile's wife wanted the monkey's heart. The monkey escaped by saying his heart was left on the tree.", m: "Presence of mind can save you from any danger." },
+        { t: "3. The Blue Jackal", c: "A jackal fell into blue dye. He claimed to be a king sent by God. When he heard other jackals howl, he howled back and was caught.", m: "You cannot hide your true nature for long." },
+        { t: "4. The Talkative Tortoise", c: "A tortoise flying with two geese opened his mouth to speak despite warnings. He fell to his death.", m: "Always listen to friendly advice and speak only when necessary." },
+        { t: "5. The Elephant and the Mice", c: "Mice helped free elephants from a hunter's net. The elephants realized that even small friends are valuable.", m: "Never underestimate anyone based on their size." },
+        { t: "6. The Loyal Mongoose", c: "A mother left her baby with a mongoose. She saw blood on the mongoose and killed it in haste, only to find it had killed a snake to save the baby.", m: "Think before you act in haste." },
+        { t: "7. The Goose that Laid Golden Eggs", c: "A greedy farmer killed his goose to get all the golden eggs at once, but found nothing inside and lost his daily income.", m: "Greed leads to heavy loss." },
+        { t: "8. The Crane and the Crab", c: "An old crane lied about a drought to eat fish. A clever crab realized the trick and choked the crane to death.", m: "The wicked eventually pay for their deeds." },
+        { t: "9. The Hunter and the Pigeons", c: "A flock of pigeons got caught in a net. They flew up together, carrying the net with them, and escaped to a friend's house.", m: "Unity is strength." },
+        { t: "10. The Brahman's Dream", c: "A poor man dreamed of being rich while holding a pot of porridge. In his dream, he kicked his wife but actually broke his only pot of food.", m: "Do not build castles in the air." },
+        { t: "11. The Musical Donkey", c: "A donkey sang loudly in a field despite a friend's warning. The farmer woke up and beat the donkey.", m: "There is a right time and place for everything." },
+        { t: "12. The Lion and the Mouse", c: "A tiny mouse saved a lion from a net after the lion had spared the mouse's life earlier.", m: "Kindness is never wasted." },
+        { t: "13. The Two-Headed Weaver", c: "A weaver wanted a boon for two heads and four arms. People thought he was a monster and beat him.", m: "Too much of anything is bad." },
+        { t: "14. The Ass in the Lion’s Skin", c: "A donkey wore a lion's skin to scare others. He was fine until he brayed and everyone realized he was just a donkey.", m: "Fine clothes cannot hide a fool." },
+        { t: "15. The Foolish Sage", c: "A sage kept a thief as a disciple. The thief eventually ran away with all the sage's belongings.", m: "Do not trust a stranger too quickly." }
+    ],
+    hi: [
+        { t: "1. शेर और चतुर खरगोश", c: "एक शेर जंगल के जानवरों को खाता था। खरगोश ने उसे कुएं में उसकी परछाई दिखाकर उसे मार दिया।", m: "बुद्धि बल से बड़ी है।" },
+        { t: "2. बंदर और मगरमच्छ", c: "मगरमच्छ की पत्नी बंदर का दिल खाना चाहती थी। बंदर ने अपनी बुद्धि से अपनी जान बचाई।", m: "मुसीबत में धैर्य न खोएं।" },
+        { t: "3. नीला सियार", c: "एक सियार नीले रंग में गिर गया। उसने खुद को राजा घोषित किया, पर अपनी आवाज से पकड़ा गया।", m: "सच्चाई छुपती नहीं है।" },
+        { t: "4. बातूनी कछुआ", c: "एक कछुआ बोलते समय लकड़ी से हाथ छोड़ बैठा और नीचे गिरकर मर गया।", m: "बिना सोचे-समझे बोलना हानिकारक है।" },
+        { t: "5. हाथी और चूहे", c: "चूहों ने जाल काटकर हाथियों को शिकारी से बचाया।", m: "छोटा मित्र भी बड़ा काम कर सकता है।" },
+        { t: "6. वफादार नेवला", c: "एक महिला ने बिना सोचे समझे वफादार नेवले को मार दिया, जिसने उसके बच्चे को सांप से बचाया था।", m: "बिना सोचे-समझे कोई काम न करें।" },
+        { t: "7. सोने के अंडे देने वाली मुर्गी", c: "एक लालची किसान ने ज्यादा अंडे पाने के चक्कर में मुर्गी को ही मार दिया।", m: "लालच बुरी बला है।" },
+        { t: "8. बगुला और केकड़ा", c: "धोखेबाज बगुले को केकड़े ने अपनी सूझबूझ से मार गिराया।", m: "बुराई का अंत बुरा ही होता है।" },
+        { t: "9. शिकारी और कबूतर", c: "कबूतरों ने एकता दिखाई और जाल लेकर उड़ गए।", m: "एकता में बल है।" },
+        { t: "10. ब्राह्मण का सपना", c: "एक गरीब ब्राह्मण ने सपने में अपनी हांडी फोड़ दी और भूखा रह गया।", m: "हवाई किले न बनाएं।" },
+        { t: "11. गधा और संगीत", c: "गधा खेत में गाने लगा और किसान ने उसे डंडों से पीटा।", m: "समय देखकर काम करना चाहिए।" },
+        { t: "12. शेर और चूहा", c: "एक नन्हे चूहे ने शेर को शिकारी के जाल से मुक्त कराया।", m: "दया कभी बेकार नहीं जाती।" },
+        { t: "13. दो सिर वाला जुलाहा", c: "लालच में जुलाहे ने दो सिर मांगे और लोगों ने उसे राक्षस समझकर मार दिया।", m: "अति हर चीज की बुरी होती है।" },
+        { t: "14. शेर की खाल में गधा", c: "गधे ने शेर की खाल पहनी पर रेंकने की वजह से पकड़ा गया।", m: "ढोंग करने से असलियत नहीं बदलती।" },
+        { t: "15. मूर्ख साधु", c: "एक साधु ने चोर पर भरोसा किया और अपना सब कुछ खो दिया।", m: "अजनबियों पर जल्दी भरोसा न करें।" }
+    ]
+};
+
             { t: "The Lion and the Rabbit", c: "A cruel lion was eating all the animals. A clever rabbit led him to a well, claiming another lion lived there. The lion jumped at his reflection and drowned.", m: "Wit is mightier than strength." },
             { t: "The Monkey and the Crocodile", c: "The crocodile's wife wanted the monkey's heart. The monkey tricked the crocodile into returning to the tree by saying he left his heart there.", m: "Presence of mind saves lives." },
             { t: "The Blue Jackal", c: "A jackal fell into a tub of blue dye. He pretended to be a king sent by God, but he howled when he heard other jackals, revealing his identity.", m: "The truth cannot be hidden for long." },
